# FridgeTherm

./: west.yml
fridge_therm/: CMakeLists.txt  prj.conf  sysbuild.conf
fridge_therm/src/: main.c
